k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: simple_cms
  labels:
    name: simple_cms
    environment: production
    managed-by: argocd
